# Booking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
hotel_service/: apps.py  models.py  serializers.py  urls.py  views.py
hotel_service/migrations/: 0001_initial.py  0002_delete_hotelservice.py  0003_initial.py
sitehotel/: asgi.py  settings.py  urls.py  wsgi.py
